--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head> 
             <meta charset="utf-8">       
             <title>Criar um web-site</title>
-            <link href="css/estilo.css" rel="stylesheet" type="text/css" media="screen" /> <!-- Aqui chamamos o arquivo estilo.css da pasta "CSS"   -->
+            <link href="css/images/estilo.css" rel="stylesheet" type="text/css" media="screen" /> <!-- Aqui chamamos o arquivo estilo.css da pasta "CSS"   -->
         </head>
         <body>
     
